--- a/index.html
+++ b/index.html
@@ -1,80 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Glimmerbound Order — Spirit Capsule</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(180deg, #0b1a24, #142f3b, #1b3f4a);
-      color: #f2f2f2;
-    }
-    header {
-      text-align: center;
-      padding: 80px 20px;
-    }
-    h1 {
-      font-size: 3rem;
-      color: #9ad7ff;
-      text-shadow: 0 0 12px #4fc3ff;
-    }
-    nav {
-      text-align: center;
-      margin-bottom: 40px;
-    }
-    nav a {
-      margin: 0 15px;
-      color: #ffe9b3;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-    .card {
-      background: rgba(255,255,255,0.05);
-      border-radius: 12px;
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 0 12px rgba(0,0,0,0.4);
-    }
-    footer {
-      text-align: center;
-      padding: 40px 20px;
-      color: white;
-      opacity: 0.7;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Glimmerbound Order — Lantern Era</title>
+<style>
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: linear-gradient(180deg, #0b1a24, #142f3b, #1b3f4a);
+    color: #f2f2f2;
+    overflow-x: hidden;
+  }
+  header {
+    text-align: center;
+    padding: 120px 20px;
+  }
+  h1 {
+    font-size: 3.5rem;
+    color: #9ad7ff;
+    text-shadow: 0 0 18px #4fc3ff;
+  }
+  p {
+    font-size: 1.2rem;
+    opacity: 0.8;
+  }
+  .enter-btn {
+    display: inline-block;
+    margin-top: 40px;
+    padding: 14px 32px;
+    background: #ffe9b3;
+    color: #1b1b1b;
+    border-radius: 8px;
+    font-weight: bold;
+    text-decoration: none;
+    box-shadow: 0 0 12px #ffe9b3;
+  }
+  footer {
+    text-align: center;
+    padding: 40px 20px;
+    opacity: 0.7;
+  }
+</style>
 </head>
+
 <body>
 
 <header>
-  <h1>Glimmerbound Order — Spirit Capsule</h1>
-  <p>A world of lanterns, lotus, and wandering spirits.</p>
+  <h1>Glimmerbound Order — Lantern Era</h1>
+  <p>The Veil stirs. The lanterns awaken. The spirits gather.</p>
+  <a class="enter-btn" href="characters.html">Enter the Capsule</a>
 </header>
-
-<nav>
-  <a href="#">Characters</a>
-  <a href="#">Packaging Gallery</a>
-  <a href="#">Lore Capsules</a>
-  <a href="#">Studio Notes</a>
-</nav>
-
-<section class="gallery">
-  <div class="card">
-    <h2>Jeoseung Saja Guide</h2>
-    <p>Lantern-bearer of the Delta Veil.</p>
-  </div>
-
-  <div class="card">
-    <h2>Lotus Wanderer</h2>
-    <p>Keeper of the mountain-light lantern.</p>
-  </div>
-</section>
 
 <footer>
   #DomedLivingSeries • #DomesandDashboards • #HolisticVision
