--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <header>
   <h1>Glimmerbound Order — Lantern Era</h1>
   <p>The Veil stirs. The lanterns awaken. The spirits gather.</p>
-  <a class="enter-btn" href="https://booknobliss1-max.github.io/Sakura.Animate/">Enter the Capsule</a>
+  <a class="enter-btn" href="https://booknobliss1-max.github.io/Lunar-Commons/">Enter the Capsule</a>
   <a class="enter-btn" href="https://booknobliss1-max.github.io/AnimeWorldBuild-digital-studio-lab/">Glimmerbound Order</a>
 </header>
 
