--- a/index.html
+++ b/index.html
@@ -52,7 +52,81 @@
   <a class="enter-btn" href="https://booknobliss1-max.github.io/AnimeWorldBuild-digital-studio-lab/">Glimmerbound Order</a>
 </header>
 
-<footer>
+<!-- ✨ Luminous Ledger — Glimmerbound Edition ✨ -->
+<section class="luminous-ledger" style="
+  max-width: 900px;
+  margin: 60px auto;
+  padding: 40px;
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 16px;
+  box-shadow: 0 0 22px rgba(148, 227, 255, 0.25);
+  backdrop-filter: blur(6px);
+">
+
+  <h2 style="
+    text-align: center;
+    font-size: 2.2rem;
+    color: #a8e8ff;
+    text-shadow: 0 0 12px #4fc3ff;
+    margin-bottom: 10px;
+  ">
+    ✨ The Luminous Ledger
+  </h2>
+
+  <p style="text-align:center; opacity:0.8; margin-bottom: 30px;">
+    “Every act of care leaves a glimmer in the water.”
+  </p>
+
+  <!-- Glimmer Pool Visualization -->
+  <div style="
+    height: 160px;
+    background: radial-gradient(circle at center, #4fc3ff33, #0b1a24);
+    border: 1px solid #4fc3ff55;
+    border-radius: 12px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+  ">
+    <!-- (Optional: glowing dots added later with JS) -->
+  </div>
+
+  <!-- Ritualized Transaction Buttons -->
+  <div style="text-align:center; margin-bottom: 30px;">
+    <button style="
+      padding: 12px 28px;
+      margin: 10px;
+      background: #ffe9b3;
+      color: #1b1b1b;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      box-shadow: 0 0 12px #ffe9b3;
+      cursor: pointer;
+    ">Release a Lantern</button>
+
+    <button style="
+      padding: 12px 28px;
+      margin: 10px;
+      background: #b3ecff;
+      color: #1b1b1b;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      box-shadow: 0 0 12px #b3ecff;
+      cursor: pointer;
+    ">Receive a Lantern</button>
+  </div>
+
+  <!-- Lore Block -->
+  <p style="font-size:1rem; opacity:0.75; line-height:1.6;">
+    Before the domes were built, settlers spoke of the Glimmer Glade — a place
+    where every act of care left a light behind. The Luminous Ledger honors that
+    truth: nothing given in kindness is ever lost.
+  </p>
+
+</section>
+
+  <footer>
   #DomedLivingSeries • #DomesandDashboards • #HolisticVision
 </footer>
 
