--- a/index.html
+++ b/index.html
@@ -104,17 +104,18 @@
       cursor: pointer;
     ">Release a Lantern</button>
 
-    <button style="
-      padding: 12px 28px;
-      margin: 10px;
-      background: #b3ecff;
-      color: #1b1b1b;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      box-shadow: 0 0 12px #b3ecff;
-      cursor: pointer;
-    ">Receive a Lantern</button>
+    <button onclick="receiveLantern()" style="
+  padding: 12px 28px;
+  margin: 10px;
+  background: #b3ecff;
+  color: #1b1b1b;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  box-shadow: 0 0 12px #b3ecff;
+  cursor: pointer;
+">Receive a Lantern</button>
+
   </div>
 
   <!-- Lore Block -->
@@ -165,6 +166,73 @@ function releaseLantern() {
   }, 3000);
 }
 </script>
+  <script>
+function receiveLantern() {
+  // 1. Create descending lantern animation
+  const pool = document.querySelector('.glimmer-pool');
+  const lantern = document.createElement('div');
+  lantern.style.position = 'absolute';
+  lantern.style.width = '12px';
+  lantern.style.height = '12px';
+  lantern.style.borderRadius = '50%';
+  lantern.style.background = '#b3ecff';
+  lantern.style.boxShadow = '0 0 14px #b3ecff';
+  lantern.style.left = Math.random() * 90 + '%';
+  lantern.style.top = '-20px';
+  lantern.style.opacity = '1';
+  lantern.style.transition = 'all 3s ease-out';
+
+  pool.appendChild(lantern);
+
+  setTimeout(() => {
+    lantern.style.top = '140px';
+    lantern.style.opacity = '0';
+  }, 50);
+
+  setTimeout(() => {
+    lantern.remove();
+  }, 3000);
+
+  // 2. Whisper message (Glimmerbound blessing)
+  const blessings = [
+    "A lantern finds you in the dark.",
+    "The Veil remembers your name.",
+    "A quiet light settles in your hands.",
+    "The Glade breathes with you.",
+    "A future moon glows softly for you."
+  ];
+
+  const whisper = blessings[Math.floor(Math.random() * blessings.length)];
+
+  // 3. Show the whisper as a soft fading message
+  const msg = document.createElement('div');
+  msg.innerText = whisper;
+  msg.style.position = 'fixed';
+  msg.style.bottom = '40px';
+  msg.style.left = '50%';
+  msg.style.transform = 'translateX(-50%)';
+  msg.style.padding = '12px 20px';
+  msg.style.background = 'rgba(255,255,255,0.08)';
+  msg.style.border = '1px solid #b3ecff55';
+  msg.style.borderRadius = '8px';
+  msg.style.color = '#b3ecff';
+  msg.style.fontSize = '1rem';
+  msg.style.boxShadow = '0 0 12px #b3ecff55';
+  msg.style.opacity = '1';
+  msg.style.transition = 'opacity 3s ease-out';
+
+  document.body.appendChild(msg);
+
+  setTimeout(() => {
+    msg.style.opacity = '0';
+  }, 100);
+
+  setTimeout(() => {
+    msg.remove();
+  }, 3200);
+}
+</script>
+
 
 </body>
 </html>
